// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Queue Should synth and match SnapShot 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    }
  },
  "provider": {
    "aws": [
      {
      }
    ]
  },
  "resource": {
    "aws_sqs_queue": {
      "HelloWorld_7964D1E8": {
        "name_prefix": "Grid-HelloWorld",
        "tags": {
          "Name": "Default-HelloWorld",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "Grid"
        }
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/Users/admin/projects/public/terraconstructs-base/terraform.Default.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "6.25.0"
      }
    }
  }
}"
`;

exports[`Queue Should synth and match SnapShot with prefix 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    }
  },
  "provider": {
    "aws": [
      {
      }
    ]
  },
  "resource": {
    "aws_sqs_queue": {
      "HelloWorld_7964D1E8": {
        "message_retention_seconds": 1209600,
        "name_prefix": "hello-worldHelloWorld",
        "tags": {
          "Name": "Default-HelloWorld",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "Grid"
        },
        "visibility_timeout_seconds": 900
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/Users/admin/projects/public/terraconstructs-base/terraform.Default.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "6.25.0"
      }
    }
  }
}"
`;

exports[`Queue Should synth with DLQ and match SnapShot 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    }
  },
  "provider": {
    "aws": [
      {
      }
    ]
  },
  "resource": {
    "aws_sqs_queue": {
      "DLQ_581697C4": {
        "message_retention_seconds": 1209600,
        "name_prefix": "Grid-DLQ",
        "tags": {
          "Name": "Default-DLQ",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "Grid"
        },
        "visibility_timeout_seconds": 900
      },
      "Queue_4A7E3555": {
        "message_retention_seconds": 1209600,
        "name_prefix": "Grid-Queue",
        "redrive_policy": "{\\"deadLetterTargetArn\\":\\"\${aws_sqs_queue.DLQ_581697C4.arn}\\",\\"maxReceiveCount\\":5}",
        "tags": {
          "Name": "Default-Queue",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "Grid"
        },
        "visibility_timeout_seconds": 900
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/Users/admin/projects/public/terraconstructs-base/terraform.Default.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "6.25.0"
      }
    }
  }
}"
`;

exports[`Queue Should synth with contentBasedDeduplication and match SnapShot 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    }
  },
  "provider": {
    "aws": [
      {
      }
    ]
  },
  "resource": {
    "aws_sqs_queue": {
      "Queue_4A7E3555": {
        "content_based_deduplication": true,
        "fifo_queue": true,
        "message_retention_seconds": 1209600,
        "name_prefix": "Grid-Queue",
        "tags": {
          "Name": "Default-Queue",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "Grid"
        },
        "visibility_timeout_seconds": 900
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/Users/admin/projects/public/terraconstructs-base/terraform.Default.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "6.25.0"
      }
    }
  }
}"
`;

exports[`Queue Should synth with fifo suffix and match SnapShot 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    }
  },
  "provider": {
    "aws": [
      {
      }
    ]
  },
  "resource": {
    "aws_sqs_queue": {
      "Queue_4A7E3555": {
        "fifo_queue": true,
        "message_retention_seconds": 1209600,
        "name_prefix": "queueQueue",
        "tags": {
          "Name": "Default-Queue",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "Grid"
        },
        "visibility_timeout_seconds": 900
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/Users/admin/projects/public/terraconstructs-base/terraform.Default.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "6.25.0"
      }
    }
  }
}"
`;
